--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,12 +2,18 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
+          <h5 class="white-text">Special Thanks</h5>
+          <ul>
+            <li><a class="white-text" href="https://ghost.org/">Ghost.org (Blog Engine)</a></li>
+            <li><a class="white-text" href="https://github.com/jroakes/ghost-material">ghost-material (Blog Theme)</a></li>
+            <li><a class="white-text" href="https://www.conoha.jp/">ConoHa by GMO (VPS)</a></li>
+            <li><a class="white-text" href="https://www.archlinux.org/">ArchLinux (OS)</a></li>
+            <li><a class="white-text" href="http://nginx.org/">nginx (Web Server)</a></li>
+          </ul>
 
         </div>
         <div class="col l3 s12">
+          <!--
           <h5 class="white-text">Settings</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -15,14 +21,14 @@
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
+          -->
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://twitter.com/aoisensi">Twitter</a></li>
+            <li><a class="white-text" href="http://steamcommunity.com/id/aoisensi">Steam</a></li>
+            <li><a class="white-text" href="https://plus.google.com/u/0/+aoisensi">Google+</a></li>
           </ul>
         </div>
       </div>
