--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,6 +1,6 @@
 <nav class="light-blue lighten-1" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="{{@blog.url}}" class="brand-logo">Logo</a>
-    
+  <div class="nav-wrapper container"><a id="logo-container" href="{{@blog.url}}" class="brand-logo">{{title}}</a>
+
     <ul class="right hide-on-med-and-down">
       {{#foreach navigation}}
           <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
@@ -12,8 +12,8 @@
           <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
       {{/foreach}}
     </ul>
-      
+
     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-      
+
   </div>
 </nav>
