--- a/default.hbs
+++ b/default.hbs
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="HandheldFriendly" content="True" />
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-    
+
     {{! Page Meta }}
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
@@ -16,6 +16,15 @@
 	<link href="{{asset "css/materialize.css"}}" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<link href="{{asset "css/prettify.css"}}"	 type="text/css" rel="stylesheet" />
 	<link href="{{asset "css/style.css"}}"		 type="text/css" rel="stylesheet" media="screen,projection"/>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-61982517-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -26,10 +35,10 @@
     {{navigation}}
 
 	{{! Everything else gets inserted here }}
-	{{{body}}}	  
-	
+	{{{body}}}
+
 	{{> "footer"}}
-	
+
     {{! Ghost outputs important scripts and data with this tag }}
     {{ghost_foot}}
 
